--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "yfinance>=0.1.63",
     "seaborn>=0.11.0",
     "pandas-datareader>=0.10.0",
+    "setuptools>=65.5.0"
 ]
 
 [project.urls]
